# minilz4

./: .gitmodules  .rustfmt.toml  Cargo.toml  LICENSE  README.md  build.rs
src/: context.rs  decoder.rs  encoder.rs  lib.rs  sys.rs
tests/: tests.rs
